--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,11 @@ div{
     width: 232px;
     height: 232px;
 }
+
+.favicons img {
+    width: 232px;
+    height: 232px;
+}
 .text-center {
     text-align: center
 }
