--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,8 +23,8 @@ body {
     font-size: 14px;
     color: #a4a4a4;
     background-color: #1b1b1b;
-    padding: 0px;
-    margin: 0px;
+    padding: 0px auto;
+    margin: 0px auto;
     margin-top: 100px;
     overflow: hidden;
 }
@@ -68,6 +68,8 @@ div{
 .favicons img {
     width: 232px;
     height: 232px;
+    text-align: center;
+    
 }
 .text-center {
     text-align: center
