--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,12 +11,14 @@
     .title {
         margin-top: 0;
         font-size: 36px;
-        line-height: 40px
+        line-height: 40px;
+        text-align: center
     }
 
     .sub-title {
         line-height: 28px;
-        font-size: 20px
+        font-size: 20px;
+        text-align: center
     }
 }
 body {
